[tool.poetry]
name = "weatheragent"
version = "0.1.0"
description = "A weather agent notifier which alerts extreme drop in temperatures built using AI micro-agents"
authors = ["Adithya Awati <aditya.n.awati@gmail.com>"]
license = "MIT-License"
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
requests = "*"
fastapi = "*"
uvicorn = "*"
uagents = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
